remove huggingface account link for privacy

--- a/ad_pushing_algorithms/fine_tune_Qwen_commercialads.ipynb
+++ b/ad_pushing_algorithms/fine_tune_Qwen_commercialads.ipynb
@@ -107,7 +107,7 @@
         "from peft import LoraConfig, get_peft_model\n",
         "from sklearn.model_selection import train_test_split\n",
         "from huggingface_hub import login\n",
-        "login('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')"
+        "login('reomove the huggingface code for privacy consideration, please load the fine-tuned model')"
       ]
     },
     {
